--- a/app.json
+++ b/app.json
@@ -3,9 +3,11 @@
     "name": "myapp",
     "slug": "myapp",
     "version": "1.0.0",
+    "platforms": [ "ios", "android", "web" ],
     "assetBundlePatterns": [
       "**/*"
     ]
   },
+  "orientation":"potrait",
   "name": "myapp"
 }
